Change Test To Use ProcessBuilder
Looking to fix a problem where output from test processes is not
working on gitlab ci.
Issue #6